--- a/cvproject-ui/src/App.css
+++ b/cvproject-ui/src/App.css
@@ -1,38 +1,91 @@
-.App {
-  text-align: center;
+/* Common */
+.primary--color {
+  color: #4f6f52 !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.primary--light--color {
+  color: #739072 !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.secondary--color {
+  color: #86a789 !important;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.light--color {
+  color: #d2e3c8 !important;
+}
+
+.gray--color {
+  color: #ccc !important;
+}
+
+.black--color {
+  color: #000 !important;
+}
+
+
+/* Main app */
+.header {
+  padding-top: 16px;
+  background: #fff;
+}
+
+.content {
+  margin: 24px 16px;
+  padding: 20px;
+}
+
+.trigger-btn {
+  font-size: 16px;
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  bottom: 10px;
+  left: 10px;
+}
+
+/* Sidebar */
+.sider {
+  height: 100vh;
+  position: sticky !important;
+  position: -webkit-sticky !important;
+  left: 0;
+  bottom: 0;
+  top: 0;
+}
+
+.logo {
+  color: #4f6f52;
+  margin: 30px 0;
+  font-size: 1.5rem;
+}
+
+.menu-bar {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 10px;
+  font-weight: 500;
 }
 
-.App-link {
-  color: #61dafb;
+.ant-menu-item-selected {
+  background-color: #4f6f52 !important;
+  color: #fff !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+/*Header*/
+
+/* button, and color */
+.ant-btn:hover {
+  color: #4f6f52 !important;
+  border-color: #4f6f52 !important;
+}
+
+.ant-btn-primary {
+  background-color: #4f6f52;
+}
+
+.ant-btn-primary:hover {
+  background-color: #173a1a !important;
+  color: #fff !important;
 }
