--- a/cvproject-ui/src/App.css
+++ b/cvproject-ui/src/App.css
@@ -1,4 +1,7 @@
 /* Common */
+html{
+  --primary-color: #4f6f52;
+}
 .primary--color {
   color: #4f6f52 !important;
 }
@@ -23,63 +26,11 @@
   color: #000 !important;
 }
 
-
-/* Main app */
-
-
-
-
-.header {
-  padding-top: 16px;
-  background: #fff;
-}
-
-.content {
-  margin: 24px 16px;
-  padding: 20px;
-}
-
-.trigger-btn {
-  font-size: 16px;
-  width: 50px;
-  height: 50px;
-  position: fixed;
-  bottom: 10px;
-  left: 10px;
-}
-
-/* Sidebar */
-.sider {
-  height: 100vh;
-  position: sticky !important;
-  position: -webkit-sticky !important;
-  left: 0;
-  bottom: 0;
-  top: 0;
-}
-
-.logo {
-  color: #4f6f52;
-  margin: 24px 0;
-  font-size: 1.5rem;
-}
-
-.menu-bar {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  font-weight: 500;
-}
-
 .ant-menu-item-selected {
   background-color: #4f6f52 !important;
   color: #fff !important;
 }
 
-
-/*Header*/
-
-/* button, and color */
 .ant-btn:hover {
   color: #4f6f52 !important;
   border-color: #4f6f52 !important;
